--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -2,8 +2,11 @@
 
 {% block crumbs %}
     <li><a href="/">Home</a></li>
-    <li><a href="#">Pool</a></li>
+    <li><a href="/{{ vehicle }}/{{ pool_number }}/">Pool {{ pool_number }}</a></li>
 {% endblock %}
 
 {% block content %}
+{% endblock %}
+
+{% block pagejs %}
 {% endblock %}
