--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -2,11 +2,16 @@
 
 {% block crumbs %}
     <li><a href="/">Home</a></li>
-    <li><a href="/{{ vehicle }}/{{ pool_number }}/">Pool {{ pool_number }}</a></li>
+    <li><a href="/pool/{{ vehicle }}/{{ pool_number }}/">Pool {{ pool_number }}</a></li>
 {% endblock %}
 
 {% block content %}
 {% endblock %}
 
-{% block pagejs %}
+{% block page_js %}
+<script type="text/javascript">
+            var refresh_data = function(event) {
+                return false;
+            }
+</script>
 {% endblock %}
