--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -2,7 +2,8 @@
 
 {% block crumbs %}
     <li><a href="/">Home</a></li>
-    <li><a href="/pool/{{ vehicle }}/{{ pool_number }}/">Pool {{ pool_number }}</a></li>
+    <li><a href="#">Search Results</a></li>
+    <li><a href="#">Pool {{ pool_number }}</a></li>
 {% endblock %}
 
 {% block content %}
