moved javascript into .js files

--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -43,13 +43,6 @@
         <!--[if lt IE 9]>
             <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
         <![endif]-->
-
-        <script>
-        $(document).ready(function() { 
-        $('#naics-code').select2({dropdownAutoWidth : true});
-        });
-        </script>
-
     </head>
     <body>
 
@@ -139,70 +132,7 @@
 
         {% block page_js %}
         {% endblock %}
-
-        <script type="text/javascript">
-
-            var get_code = function () {
-                return $('#naics-code').val();
-            };
-           
-            var get_setasides = function(){
-                var setasides = [];
-                $("form#setaside-filters input:checked").each( function(index) {
-                    setasides.push($(this).val());
-                });
-
-                return setasides;
-            }
-
-            var clear_content = function(){
-                $("#custom_page_content").find("div.column").remove();
-            };
-
-            var build_query_string = function(event) {
-                /* build query string from search form and push to history stack */
-                var qs = "?";
-                if (get_code() != 'Select an option') {
-                    qs += "naics-code=" + get_code() + "&";
-                } else {
-                    qs += "naics-code=all&";
-                    $("#naics-code").select2().select2("val", "all");
-                }
-                if (get_setasides().length > 0) {
-                    qs += "setasides=" + get_setasides();
-                }
-                History.pushState(null, null, qs);
-                return refresh_data(event);
-            }
-
-            var refresh_data = function(event) {
-                /* query api for search results based on current state of form elements */
-                var code = get_code();
-                var setasides = get_setasides(); 
-                var url = "/api/vendors/"
-                var query_data = {'group': 'pool'}
-            
-                if (code != 'null' && code != null) {
-                    query_data["naics"] = code;
-                }
-                if (setasides.length > 0) {
-                    query_data["setasides"] = setasides.join();
-                }
-                
-                $.getJSON(url, query_data,  function(data){
-                    clear_content();
-                    load_content(data);
-                });
-
-                return false;
-            }
-
-            $("#naics-code").change(build_query_string);
-            $("#setaside-filters").change(build_query_string);
-
-            
-        </script>
-
+        <script type="text/javascript" src="{% static "mirage_site/js/base.js" %}"></script>
     </body>
 
 </html>
