--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -239,7 +239,8 @@ ul, li {
     display:block;
     font-size:1.8em;
     margin-bottom:-7px;
-    font-weight: 500;
+    font-weight: 600;
+    color:#45697c;
 }
 .oasis_subtitle {
     font-size:.8em;
@@ -253,18 +254,20 @@ ul, li {
    margin-bottom:10px;
     padding:5px;
 }
-#filter_container {
+#container #filter_container {
     width:180px;
-    background-color: #eee;
+    background:url(/static/mirage_site/images/filter_bg.jpg);
     float:left;
     height:600px;
     margin-top:32px;
-    border-right: 1px solid #cccccc;
+    color:#fff;
+    padding-right:10px;
 }
 .filter_title  {
-    margin-left:10px;
-    margin-bottom:0px;
+    margin-left:20px;
+    margin-bottom:5px;
     font-weight: 700;
+    color:#c4feff;
 }
 #filter_container input  {
     width: 13px;
@@ -298,7 +301,7 @@ ul, li {
     width:100%;
     background-color: ;
     height:33px;
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 1px solid #eeeeee;
 }
 #select_vehicle {
     width:auto;
@@ -308,7 +311,7 @@ a.vehicle_tab, {
     display:inline-block;margin:0 0 5px 0;
     background-color:#28aadc;
     padding:10px;
-    color:#fff;
+    color:#000;
     font-size:12px;
     text-align:center;
     width:100px;
@@ -324,10 +327,7 @@ a.vehicle_tab, {
     display:block;
 }
 a.select_vehicle {
-  color:#fff;
-    border-width:1px;
-  border-style:solid;
-  border-color:#fff;
+  color:#000;
   padding-top:4px;
 }
 .select_vehicle:hover {
@@ -363,8 +363,8 @@ a.select_vehicle {
     width:100%;
     background-color:;
     height:37px;
-    border-bottom: 1px solid #cccccc;
-    padding-top:5px;
+    border-top: 1px solid #eeeeee;
+    padding-top:7px;
 }
 #number_of_results  {
     max-width:650px;
@@ -375,6 +375,8 @@ a.select_vehicle {
     height:30px;
     padding-left:25px;
     background-color: ;
+    color:#4a84a3;
+    font-weight:600;
 }
 #matching_your_search   {
 }
@@ -390,17 +392,32 @@ a.select_vehicle {
     display:inline;   
 }
 .sam_style  {
-    color:#aaaaaa !important;
+    color:#5eb183 !important;
 }
 .filterbox   {
     margin-left:10px;
     line-height: 2em;
     font-size:.9em;
+    padding-left:10px;
+    line-height: 1.3em;
 }
 #filter label input  {
     padding-right:5px !important; 
 }
-
+#your_search_criteria{
+    width:100%;
+    height:25px;
+    margin-bottom:5px;
+    font-size:.8em;
+    margin-top:1px;
+}
+.your_search_grey   {
+    color:#cccccc;
+}
+.your_search_blue   {
+    color:#4a84a3;
+    margin-right:15px;
+}
 .column {
     float:left;
     margin-right:5%;
@@ -420,18 +437,23 @@ a.select_vehicle {
 }
 .number_of_vendors_in_pool {   
     margin-top:-8px;
-    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #eeeeee;
+    padding-bottom: 4px;
 }
 .vendor_names {
     font-size: 0.8em;
+    color:#777777;
+    line-height: 1.3em;
+    padding-bottom:-3px;
 }
 a.pool_link {
 
 }
-#custom_page_content .column h2.pool_title a:link{ color:#134896; } 
-#custom_page_content a:visited{ color:#330033; } 
-#custom_page_content a:hover{ color:#942A5F; } 
-#custom_page_content a:active{ color:#6FB25C}
+
+#custom_page_content .column h2.pool_title a:link{ color:#adc9cd; } 
+#custom_page_content .column h2.pool_title a:visited{ color:; } 
+#custom_page_content .column h2.pool_title a:hover{ color:#7fc8cd; text-decoration: none;} 
+#custom_page_content .column h2.pool_title a:active{ color:#6FB25C}
 
 
 /* Pool Detail Styles */
@@ -553,6 +575,8 @@ a.pool_link {
 #pool_table .pooldetail .vendor_name tr:hover td{
     background-color:#eeeeee;
 }
-
+.pure-checkbox  {
+    padding-bottom:10px;
+}
 
 }
