--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -51,7 +51,7 @@
             <div id="header">
                 <div id="page_title">
                     <span class="oasis_title">OASIS Market Research Tool</span>
-                    <span class="oasis_subtitle">find vendors by NAICS with the set-asides you need</span>
+                    <span class="oasis_subtitle">find vendors by NAICS with the socioeconomic factors you need</span>
                 </div><!--end page_title<!-->
 
                 <div id="search">
