--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block content %}
-<div id="your_search_criteria">
+<!-- <div id="your_search_criteria">
     <span class="your_search_grey">your search: </span><span class="your_search_blue">541330 - Engineering Services</span>
 
     <span class="your_search_grey">filters: </span><span class="your_search_blue">veteran owned, hubzone</span>
-</div>
+</div> -->
 {% endblock %}
 
 {% block page_js %}
