--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -419,6 +419,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbdbdb', end
     font-size:.8em;
     margin-top:1px;
     border-bottom: 1px solid #eeeeee;
+    display:none;
 }
 .your_search_grey   {
     color:#cccccc;
