fixed bug reverting results to 'all naics codes' on pool detail page (closes #63)

--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -57,7 +57,7 @@
                 <div id="search">
                     <form id="naics-search" class="pure-form">
                         <select id="naics-code">
-                            <option>Select a NAICS code</option>
+                            <option></option>
                         </select>
                     </form>
                 </div><!--end search<!-->
